plugins {
    id 'idea'
    id 'io.freefair.lombok' version "${lombok}" apply false
    id 'org.springframework.boot' version "${springBoot}" apply false
    id 'io.spring.dependency-management' version "${dependencyManagement}" apply false
}

idea {
    project {
        languageLevel = 15
    }
    module {
        downloadJavadoc = true
        downloadSources = true
    }
}

group 'io.github.eaxdev'
version '0.1'

allprojects {
    group 'io.github.eaxdev'
    version '0.0.1'

    tasks.withType(JavaCompile) {
        sourceCompatibility = JavaVersion.VERSION_15
        targetCompatibility = JavaVersion.VERSION_15
    }
}

subprojects {

    repositories {
        mavenCentral()
    }

    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'java'

    apply plugin: 'io.freefair.lombok'

    dependencies {
        implementation 'org.mapstruct:mapstruct'
        annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
        annotationProcessor 'org.mapstruct:mapstruct-processor'
    }

    dependencyManagement {
        dependencies {
            dependency("org.mapstruct:mapstruct:${mapstruct}")
            dependency("org.mapstruct:mapstruct-processor:${mapstructProcessor}")
        }
    }

    compileJava {
        options.compilerArgs = [
                '--enable-preview'
        ]
    }

    test {
        jvmArgs '--enable-preview'
    }

    test {
        useJUnitPlatform()
    }
}